add by swimmingwhale

--- a/elpa/org-page-20160413.329/themes/mmn/templates/category-index.mustache
+++ b/elpa/org-page-20160413.329/themes/mmn/templates/category-index.mustache
@@ -6,7 +6,7 @@
 <div class="list_item list_view">
   <div class="article_title">   
     <h1>
-      <span class="link_title"><a href="/zhang648462189/article/details/39183769">{{post-title}}</a></span>
+      <span class="link_title"><a href="{{post-uri}}">{{post-title}}</a></span>
     </h1>
   </div>
   <div class="article_manage">
