add by swimmingwhale

--- a/elpa/org-page-20160413.329/themes/mmn/templates/container.mustache
+++ b/elpa/org-page-20160413.329/themes/mmn/templates/container.mustache
@@ -16,7 +16,7 @@
     <div id="header">
       <div class="header">
         <div id="blog_title">
-          <h2><a href="">{{page-title}}</a></h2>
+          <h2><a href="/">木马牛</a></h2>
           <h3>等咱有了钱，买两碗豆浆，一碗爱喝不喝，一碗就是不喝！</h3>
           <div class="clear">
           </div>
