--- a/elpa/org-page-20160413.329/themes/mmn/templates/index.mustache
+++ b/elpa/org-page-20160413.329/themes/mmn/templates/index.mustache
@@ -1,12 +1,6 @@
-{{#categories}}
-  <div id="outline-container-sec-{{id}}" class="outline-2">
-    <h2 id="sec-{{id}}">{{category}}</h2>
-    <div class="outline-text-2" id="text-{{id}}">
-      <ul class="org-ul">
-        {{#posts}}
-          <li><a href="{{post-uri}}">{{post-title}}</a></li>
-        {{/posts}}
-      </ul>
-    </div>
-  </div>
-{{/categories}}
+<div style="float:right;border: 1px solid LightGrey;width:82%">
+人生愁苦几经年，不媚王权不慕仙。
+此生有幸遭人笑，半辈无求任我颠。
+寒酸十足犹可爱，迂腐三分尚自然。
+只想乘风邀太白，携来古赋会陶潜。
+</div>
