--- a/elpa/org-page-20160413.329/themes/mmn/templates/post.mustache
+++ b/elpa/org-page-20160413.329/themes/mmn/templates/post.mustache
@@ -1,4 +1,4 @@
-<div>{{! content, do NOT indent}}
+<div style="float:right;border: 1px solid LightGrey;width:72%;padding: 2% 5% 5% 5%;">{{! content, do NOT indent}}
 <div class="post">
 {{#title}}
 <h1>{{title}}</h1>
