Revert "add by swimmingwhale"
This reverts commit 3a9878ceaa948a779aa7e8dc7600915705243039.

--- a/elpa/org-page-20160413.329/themes/mmn/templates/container.mustache
+++ b/elpa/org-page-20160413.329/themes/mmn/templates/container.mustache
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  {{{header}}}
+  <head>
+    <title>{{page-title}}</title>
+    <meta charset="utf-8" />
+    <meta name="author" content="{{author}}" />
+    {{#description}}
+    <meta name="description" content="{{description}}" />
+    {{/description}}
+    {{#keywords}}
+    <meta name="keywords" content="{{keywords}}" />
+    {{/keywords}}
+    <link rel="stylesheet" href="/media/css/main.css" type="text/css">
+  </head>
   <body>
+    <div id="header">
+      <div class="header">
+        <div id="blog_title">
+          <h2><a href="/">木马牛</a></h2>
+          <h3>等咱有了钱，买两碗豆浆，一碗爱喝不喝，一碗就是不喝！</h3>
+          <div class="clear">
+          </div>
+        </div>
+        <div class="clear">
+        </div>
+      </div>      
+    </div>
     <div>
-      <div style="float:left;border: 1px solid LightGrey;width:16%">
-	{{{nav}}}
-      </div>
-      <div style="float:right;border: 1px solid LightGrey;width:72%;padding: 2% 5% 5% 5%;">
-	{{{content}}}
-	{{{comment}}}
-	</div>
-        <div class="clear"></div>
+      {{{nav}}}
+      {{{content}}}
+        <div class="clear">
+        </div>
     </div>
   </body>
 </html>
