--- a/elpa/org-page-20160413.329/themes/mmn/templates/nav.mustache
+++ b/elpa/org-page-20160413.329/themes/mmn/templates/nav.mustache
@@ -1,12 +1,14 @@
-    <div id="header">{{ !nav }}
-      <div class="header">
-        <div id="blog_title">
-          <h2><a href="/">木马牛</a></h2>
-          <h3>等咱有了钱，买两碗豆浆，一碗爱喝不喝，一碗就是不喝！</h3>
-          <div class="clear">
-          </div>
-        </div>
-        <div class="clear">
-        </div>
-      </div>      
-    </div>
+      <div style="float:left;border: 1px solid LightGrey;width:16%">
+      {{! nav }}
+      	<ul class="tag_box inline">
+      	  <h4>Category</h4>
+        <ul>
+          {{#nav-categories}}
+          <li><a href="{{category-uri}}">{{category-name}}</a></li>
+          {{/nav-categories}}
+        </ul>
+
+      	<div class="clear">
+      	</div>
+
+      </div>
