add by swimmingwhale

--- a/elpa/org-page-20160413.329/themes/mmn/templates/nav.mustache
+++ b/elpa/org-page-20160413.329/themes/mmn/templates/nav.mustache
@@ -2,11 +2,9 @@
       {{! nav }}
       	<ul class="tag_box inline">
       	  <h4>Category</h4>
-        <ul>
           {{#nav-categories}}
-          <li><a href="{{category-uri}}">{{category-name}}</a></li>
+          <a href="{{category-uri}}">{{category-name}}</a>
           {{/nav-categories}}
-        </ul>
 
       	<div class="clear">
       	</div>
