add by swimmingwhale

--- a/elpa/org-page-20160413.329/themes/mmn/templates/nav.mustache
+++ b/elpa/org-page-20160413.329/themes/mmn/templates/nav.mustache
@@ -1,10 +1,11 @@
-      <div style="float:left;border: 1px solid LightGrey;width:16%">
+      <div style="float:left;border: 1px solid LightGrey;width:10%;padding: 2% 3% 5% 3%;">
       {{! nav }}
-      	<ul class="tag_box inline">
+	<div>
       	  <h4>Category</h4>
           {{#nav-categories}}
-          <a href="{{category-uri}}">{{category-name}}</a>
+          <a href="{{category-uri}}">{{category-name}}</a></br>
           {{/nav-categories}}
+	</div>
 
       	<div class="clear">
       	</div>
