add by swimmingwhale

--- a/elpa/org-page-20160413.329/themes/mmn/templates/container.mustache
+++ b/elpa/org-page-20160413.329/themes/mmn/templates/container.mustache
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>{{page-title}}</title>
+    <title>木马牛</title>
     <meta charset="utf-8" />
     <meta name="author" content="{{author}}" />
     {{#description}}
